--- a/index.html
+++ b/index.html
@@ -5,34 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MineSweeper</title>
-    <link rel="stylesheet" href="main.css">
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="mine.css">
+    <script src="minesweeper.js"></script>
 </head>
 
 <body>
     <h1>Every mine you hit kills one puppy! ☺</h1>
     <div id="grid">
-        <button class ="button"; id="00"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="01"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="02";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="03";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class ="button"; id="00"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="01"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="02"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="03"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
         <br>
-        <button class="button;"; id="10";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="11";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="12";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="13";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="10"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="11"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="12"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="13"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
         <br>
-        <button class="button;"; id="20";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="21";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="22";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="23";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="20"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="21"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="22"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="23"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
         <br>
-        <button class="button;"; id="30";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="31";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="32";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
-        <button class="button;"; id="33";  onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="30"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="31"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="32"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
+        <button class="button;"; id="33"; style="background-color: lightgreen"; onclick="leftClicked(this.id)"; oncontextmenu="rightClicked(this.id);"></button>
     </div>
     <div id="winLose"></div>
+    <div id="gif"></div>
 </body>
 
 </html>
